[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Radoslav Mráz <radoslav.mraz95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = ""
cgmath = ""

[dependencies.rand]
version = "0.7.0"
features = ["small_rng"]